# fishook

./: .gitignore  MANIFEST.in  README.md  fishook.json  fishook.py  fishook.sh  package-lock.json  package.json  pyproject.toml  test-error-config.json
.github/workflows/: publish-to-pip.yml
common/: ensure-executable.sh  forbid-file-pattern.sh  forbid-pattern.sh  iter-source.sh  modify-commit-message.sh  pcsed.sh  scope.sh  sedder.sh
scripts/: sync-version.sh
tests/: README.md  helpers.bash  test_args_and_env.bats  test_common_utils.bats  test_helpers.bats  test_install.bats  test_integration.bats  test_various_hooks.bats
tests/fixtures/configs/: forbid-pattern.json  simple.json  with-filters.json
