[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fishook"
version = "1.0.2"
description = "A tiny, Git-native hook runner driven by fishook.json. Installs stubs into .git/hooks and runs hook commands via bash -lc for any language/tooling."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Your Name", email = "you@example.com" }
]
keywords = ["git", "hooks", "pre-commit", "tooling", "devtools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Software Development :: Quality Assurance"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/yourname/fishook"
Repository = "https://github.com/yourname/fishook"
Issues = "https://github.com/yourname/fishook/issues"

[project.scripts]
fishook = "fishook:main"

[tool.setuptools]
py-modules = ["fishook"]

[tool.setuptools.data-files]
"share/fishook" = ["fishook.sh"]
"share/fishook/common" = ["common/*"]

[tool.setuptools.packages.find]
where = ["."]
include = ["fishook.sh", "common*"]
exclude = ["node_modules*"]

